--- a/a_moodle_41/docker-compose.dev.yml
+++ b/a_moodle_41/docker-compose.dev.yml
@@ -26,8 +26,10 @@ services:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
       - ALLOW_EMPTY_PASSWORD=yes
     volumes:
-      - 'moodle_data_m1:/bitnami/moodle'
-      - 'moodledata_data_m1:/bitnami/moodledata'
+      - './moodle_data_m1:/bitnami/moodle'
+      - './moodledata_data_m1:/bitnami/moodledata'
+      # - 'moodle_data_m1:/bitnami/moodle'
+      # - 'moodledata_data_m1:/bitnami/moodledata'
     depends_on:
       - mariadb
 
